		-[Core] A NullReferenceException would be thrown by the container, when a Func<T> registration was
		 called that returned null combined with the injection of one or more properties on that given T.
		 (work item 19526)
		-[Core] The exception thrown by the container when one of the type's properties can't be resolved is
		 more expressive now, and describes the name of the property.


Version v2.1.0 (v2.1 RTM) 2013-03-19
	General description:
		This minor release adds two new features: A new extension point has been added that makes it 
		considerably easier to auto-wire properties; A new diagnostic warning has been added that searches the
		configuration for components with too many dependencies, because they can cause maintainability issues.
	
	New features:
		-[Core] IPropertySelectionBehavior interface added to allow users to override the default behavior
		 (which is to not inject any properties). The default behaviour can be changed by replacing the
		 Container.Options.PropertySelectionBehavior property. (work item 19389)
		-[Core] New warning added in the Diagnostic Services to warn about classes with too many dependencies.
		 (work item 19428)

	Bug fixes:
		-[Core] Register<TService, TImplementation>(Lifestyle) did not verify whether TImplementation was a
		 constructable type (in the default configuration this means that it is concrete, has one constructor,
		 and no primitive constructor arguments). This resulted in a failure during when resolving the
		 instance, but this was later than needed. (work item 19464)


Version v2.0.2 (v2.0.2 RTM) 2013-03-10
	General description:
		This release fixes a bug with the Visual Studio Debug View.

	Bug fixes:
		-[Core] Diagnostic Services fail when grouping generic types that have a generic type constraint.
		 (work item 19449)


Version v2.0.1 (v2.0.1 RTM) 2013-02-28
	General description:
		This release fixes a few small bugs.

	Bug fixes: